# cgse

./: .gitignore  CMakeLists.txt  main.cpp
lib/glad/: glad.c  glad.h
shader/: shader.fs  shader.h  shader.vs
texture/: stones.dds  window.dds
